# scout

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  PORTING.md  PRD.md  README.md  go.mod  go.sum  mprocs.yaml  outreach-template.md  playbook.md  pyproject.toml  taste.md  taste.toml
.claude/: launch.json
.tasks/FEAT-20260607_155517-3c84/: feature.json  index.json
.tasks/FEAT-20260609_204543-5a0c/: feature.json  index.json
.tasks/FEAT-20260614_235619-8d2f/: feature.json  index.json
cmd/scout/: dotenv.go  dotenv_test.go  main.go
docs/: README.md  api.md  application-answers.md  architecture.md  brain-first-plan.md  brainbot-contract.md  chat.md  cold-outreach-doctrine.md  data-model.md  enrichment.md  limitations.md  north-star.md  operations.md  outreach-agent.md  pipeline.md  react-migration.md  screenshot-capture.md  ui-v2-prd.md  ui-v3-control-surface.md  verdict.md
internal/anthropic/: client.go  client_test.go  stream.go  stream_test.go
internal/brainbot/: client.go  client_test.go  episodes.go
internal/capture/: ats.go  ats_test.go  capture.go  capture_test.go  jsonld.go  jsonld_test.go  questions.go  questions_test.go
internal/chat/: engine.go  engine_test.go  prompt.go  tools.go
internal/criteria/: resolver.go  resolver_test.go
internal/distill/: distill.go  distill_test.go
internal/enrich/: challenge_test.go  enrich.go  facts.go  facts_test.go  notfound_test.go  run_test.go
internal/filter/: filter.go  filter_test.go  taste_default.toml
internal/ingest/: capture.go  csv.go  csv_test.go  dedup_round2_test.go  dedup_round3_test.go  dedup_round4_test.go  dedup_test.go  ensure_test.go
internal/jobs/: jobs.go
internal/outreach/: answers.go  answers_test.go  blocks.go  blocks_test.go  config.go  config_test.go  discover.go  discover_test.go  doctrine.go  doctrine_default.md  doctrine_test.go  engine.go  engine_test.go  jdfetch.go  jdfetch_test.go  lint.go  lint_test.go  pause_turn_test.go  prompts.go  stages.go  template.go  template_test.go  voice.go  voice_test.go
internal/playbook/: default.md  playbook.go
internal/store/: brain_profile.go  brain_profile_test.go  chat.go  chat_test.go  companies.go  companies_test.go  contacts.go  contacts_test.go  detail.go  enrichment.go  enrichment_test.go  flags.go  followups.go  followups_test.go  marks.go  merge_guard_test.go  migration_test.go  outreach.go  outreach_config.go  outreach_doctrine.go  outreach_drafts.go  outreach_sources.go  outreach_status_test.go  outreach_template.go  overrides.go  playbook.go  posting_answers.go  posting_answers_test.go  postings.go  postings_test.go  prompt_overrides.go  reviews.go  runs.go  sender.go  settings.go  settings_test.go  stage.go  stage_test.go  statuses.go  statuses_test.go  (+7 more)
internal/taste/: taste.go  taste_test.go
internal/verdict/: brain_test.go  verdict.go
internal/web/: addcompany_test.go  answers.go  answers_test.go  anthropickey.go  capture.go  capture_test.go  chat.go  chat_test.go  contacts.go  editcompany_test.go  editor.go  filter_options.go  flags_test.go  followups.go  followups_test.go  index.html  integrations.go  me.go  (+14 more)
plans/: draft-shorten.md  gmail-integration.md  merge-companies.md  sent-email-voice-loop.md
scout/: __init__.py  cli.py
tests/: conftest.py  gmail_fakes.py  helpers.py  httpstub.py  outreach_fakes.py  test_anthropic.py  test_ats.py  test_brain_profile.py  test_brainbot.py  test_capture.py  test_chat.py  test_chat_engine.py  test_cli.py  test_companies.py  test_contacts.py  test_criteria.py  test_distill.py  test_enrich.py  test_enrichment.py  test_filter.py  test_gmail_classify.py  test_gmail_client.py  test_gmail_match.py  test_gmail_message.py  test_gmail_oauth.py  test_gmail_store.py  test_gmail_sync.py  test_ingest.py  test_jsonld.py  test_merge_guard.py  test_outreach_answers.py  test_outreach_discover.py  test_outreach_engine.py  test_outreach_jdfetch.py  test_outreach_pause_turn.py  test_outreach_stages.py  test_outreach_template.py  test_outreach_voice.py  test_posting_answers.py  test_postings.py  (+27 more)
web/: index.html  node_modules  package-lock.json  package.json  tsconfig.json  vite.config.ts
(+253 files in other folders)
