# pyproject.toml is the modern Python project descriptor — the rough equivalent
# of go.mod. It names the package, lists runtime dependencies, and configures the
# test runner. `pip install -e .` reads this and installs scout in "editable"
# mode so `import scout` works from anywhere without copying files around.
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "scout"
version = "0.1.0"
description = "Personal job-fit scorer (Python port of the Go backend)"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "python-multipart",  # FastAPI multipart form parsing (the /api/ingest CSV upload)
]

[project.optional-dependencies]
dev = ["pytest"]

# Console entry point: `scout` on the PATH dispatches to the argparse CLI
# (cmd/scout/main.go's equivalent). Installed by `pip install -e .`.
[project.scripts]
scout = "scout.cli:main"

# Tell setuptools the importable package lives in scout/ (not auto-discovered,
# because tests/ sits alongside it).
[tool.setuptools.packages.find]
include = ["scout*"]

# Non-Python files that must ship inside the package — they're read at runtime
# via Path(__file__).parent, so an installed wheel (the Docker deploy) needs them
# packaged alongside the code: the .sql migrations, the pre-filter default
# (filter/__init__.py), and the playbook default (playbook/__init__.py).
[tool.setuptools.package-data]
scout = [
    "store/migrations/*.sql",
    "filter/*.toml",
    "playbook/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
